fix(styles): Increase section spacing to avoid overlapping meatball menu icon (#3644)

--- a/system-addon/content-src/components/Base/_Base.scss
+++ b/system-addon/content-src/components/Base/_Base.scss
@@ -37,7 +37,7 @@ main {
 
 .section-top-bar {
   height: 16px;
-  margin-bottom: 12px;
+  margin-bottom: 16px;
 }
 
 .section-title {
